Fix video x scrolling issue on iOS.

--- a/source/sass/index.sass
+++ b/source/sass/index.sass
@@ -131,16 +131,22 @@ header
   .map
     max-width: 100%
 
-#videoBackground
+.video
   /*  動画を背景に設定するスタイルシート  */
   position: fixed
+  top: 0
   right: 0
-  bottom: 0
+  z-index: -100
   min-width: 100%
   min-height: 100%
   width: auto
-  height: auto
-  z-index: -100
+  height: 100vh
+  background-image: url(../image/bg.jpg)
+  background-position: center
+
+  #videoBackground
+    width: auto
+    height: 100vh
   
 /* メンバー */
 .people 
